Add hero section

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,7 +4,7 @@
 }'>
 	<block name="main">
 		<main>
-
+			<include src="html/pages/home/hero/_hero.html"></include>
 		</main>
 	</block>
 </extends>
