Add about section

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,6 +5,7 @@
 	<block name="main">
 		<main>
 			<include src="html/pages/home/hero/_hero.html"></include>
+			<include src="html/pages/home/about/_about.html"></include>
 		</main>
 	</block>
 </extends>
