Add rental section

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,6 +6,7 @@
 		<main>
 			<include src="html/pages/home/hero/_hero.html"></include>
 			<include src="html/pages/home/about/_about.html"></include>
+			<include src="html/pages/home/rental/_rental.html"></include>
 		</main>
 	</block>
 </extends>
