--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,6 +7,7 @@
 			<include src="html/pages/home/hero/_hero.html"></include>
 			<include src="html/pages/home/about/_about.html"></include>
 			<include src="html/pages/home/rental/_rental.html"></include>
+			<include src="html/pages/home/choose/_choose.html"></include>
 		</main>
 	</block>
 </extends>
