--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,6 +8,7 @@
 			<include src="html/pages/home/about/_about.html"></include>
 			<include src="html/pages/home/rental/_rental.html"></include>
 			<include src="html/pages/home/choose/_choose.html"></include>
+			<include src="html/pages/home/why/_why.html"></include>
 		</main>
 	</block>
 </extends>
