Add feedback section

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,6 +9,7 @@
 			<include src="html/pages/home/rental/_rental.html"></include>
 			<include src="html/pages/home/choose/_choose.html"></include>
 			<include src="html/pages/home/why/_why.html"></include>
+			<include src="html/pages/home/feedback/_feedback.html"></include>
 		</main>
 	</block>
 </extends>
