--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,6 +10,7 @@
 			<include src="html/pages/home/choose/_choose.html"></include>
 			<include src="html/pages/home/why/_why.html"></include>
 			<include src="html/pages/home/feedback/_feedback.html"></include>
+			<include src="html/pages/home/request/_request.html"></include>
 		</main>
 	</block>
 </extends>
