Add movement section

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -5,12 +5,12 @@
 	<block name="main">
 		<main>
 			<include src="html/components/breadcrumbs/_index.html" locals='{"pageName": "About"}'></include>
-			<!-- <include src="html/pages/home/hero/_hero.html"></include>
-			<include src="html/pages/home/about/_about.html"></include>
-			<include src="html/pages/home/rental/_rental.html"></include> -->
+			<include src="html/pages/about/movement/_movement.html"></include>
+			<!-- <include src="html/pages/home/about/_about.html"></include> -->
+			<!-- <include src="html/pages/home/rental/_rental.html"></include> -->
 			<include src="html/pages/home/choose/_choose.html"></include>
-			<!-- <include src="html/pages/home/why/_why.html"></include>
-			<include src="html/pages/home/feedback/_feedback.html"></include> -->
+			<!-- <include src="html/pages/home/why/_why.html"></include> -->
+			<!-- <include src="html/pages/home/feedback/_feedback.html"></include> -->
 			<include src="html/pages/home/request/_request.html"></include>
 		</main>
 	</block>
