--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -7,6 +7,7 @@
 			<include src="html/components/breadcrumbs/_index.html" locals='{"pageName": "About"}'></include>
 			<include src="html/pages/about/movement/_movement.html"></include>
 			<include src="html/pages/about/stats/_stats.html"></include>
+			<include src="html/pages/about/advantages/_advantages.html"></include>
 			<include src="html/pages/home/choose/_choose.html"></include>
 			<include src="html/pages/home/request/_request.html"></include>
 		</main>
