Add discount section

--- a/src/html/pages/home/rental/_rental.html
+++ b/src/html/pages/home/rental/_rental.html
@@ -6,7 +6,7 @@
 				<p>Usu nobis virtute eu summo sanctus te, tempor mei at fugit<br>
 					senserit <b>suscipiantur</b>, per erat epicuri.</p>
 			</div>
-			<a class="btn" href="/bicycles.html">rental bike</a>
+			<a class="btn" href="/contacts.html">rental bike</a>
 		</div>
 		<ul class="rental-price">
 			<li>
