--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,11 +6,11 @@
 		<main>
 			<include src="html/pages/home/hero/_hero.html"></include>
 			<include src="html/pages/home/about/_about.html"></include>
-			<include src="html/pages/home/rental/_rental.html"></include>
-			<include src="html/pages/home/choose/_choose.html"></include>
-			<include src="html/pages/home/why/_why.html"></include>
-			<include src="html/pages/home/feedback/_feedback.html"></include>
-			<include src="html/pages/home/request/_request.html"></include>
+			<include src="html/sections/rental/_rental.html"></include>
+			<include src="html/sections/choose/_choose.html"></include>
+			<include src="html/sections/why/_why.html"></include>
+			<include src="html/sections/feedback/_feedback.html"></include>
+			<include src="html/sections/request/_request.html"></include>
 		</main>
 	</block>
 </extends>
