Add heading for bikes section

--- a/src/html/pages/bicycles/bikes/_bikes.html
+++ b/src/html/pages/bicycles/bikes/_bikes.html
@@ -1,5 +1,6 @@
 <section class="bikes">
 	<div class="container bikes__inner">
+		<h2 class="sr-only">List of our bicycles</h2>
 		<div class="tabs">
 			<ul class="tabs-nav">
 				<li><a class="tabs-nav__link active" href="#tab0">Mountain</a></li>
