Add request-bike section

--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -7,7 +7,7 @@
 			<include src="html/components/breadcrumbs/_index.html" locals='{"pageName": "Services"}'></include>
 			<include src="html/pages/services/advantages/_advantages.html"></include>
 			<include src="html/sections/rental/_rental.html"></include>
-			<!--  -->
+			<include src="html/pages/services/request-bike/_request-bike.html"></include>
 			<include src="html/sections/why/_why.html"></include>
 			<include src="html/sections/feedback/_feedback.html"></include>
 		</main>
