Add adaptability for choose section

--- a/src/html/sections/choose/_choose.html
+++ b/src/html/sections/choose/_choose.html
@@ -2,7 +2,7 @@
 	<div class="container choose-bike__inner">
 		<div class="content">
 			<h2 class="title">Choose<br> you bike</h2>
-			<a class="btn" href="/bicycles.html">view more</a>
+			<a class="choose-bike__link btn" href="/bicycles.html">view more</a>
 		</div>
 		<ul class="bikes-list">
 			<li>
