Add adaptability for why section

--- a/src/html/sections/why/_why.html
+++ b/src/html/sections/why/_why.html
@@ -8,7 +8,7 @@
 						<h3 class="advantage-card__title">Low prices</h3>
 						<div class="advantage-card__text text">
 							<p>We provide affordable prices for
-								renting bikes</p>
+								renting bikes.</p>
 						</div>
 					</article>
 				</li>
