Add adaptability for feedback section

--- a/src/html/sections/feedback/_feedback.html
+++ b/src/html/sections/feedback/_feedback.html
@@ -16,7 +16,7 @@
 				<div class='swiper-wrapper'>
 					<div class='swiper-slide'>
 						<include src='html/components/feedback-card/_index.html' locals='{
-							"feedbackText": "I rented a bike here some time and was satisfied with service. Price is nice and quality of bikes are excellent.",
+							"feedbackText": "I rented a bike here some time and was satisfied with service. Price is nice and quality of bikes are excellent. I like it!",
 							"authorImageName": "p-1",
 							"authorName": "Adam Vorlok",
 							"authorRole": "Customer"
@@ -32,7 +32,7 @@
 					</div>
 					<div class='swiper-slide'>
 						<include src='html/components/feedback-card/_index.html' locals='{
-							"feedbackText": "I rented a bike here some time and was satisfied with service. Price is nice and quality of bikes are excellent.",
+							"feedbackText": "I rented a bike here some time and was satisfied with service. Price is nice and quality of bikes are excellent. I like it!",
 							"authorImageName": "p-1",
 							"authorName": "Adam Vorlok",
 							"authorRole": "Customer"
@@ -48,7 +48,7 @@
 					</div>
 					<div class='swiper-slide'>
 						<include src='html/components/feedback-card/_index.html' locals='{
-							"feedbackText": "I rented a bike here some time and was satisfied with service. Price is nice and quality of bikes are excellent.",
+							"feedbackText": "I rented a bike here some time and was satisfied with service. Price is nice and quality of bikes are excellent. I like it!",
 							"authorImageName": "p-1",
 							"authorName": "Adam Vorlok",
 							"authorRole": "Customer"
