Add adaptability for request-bike section

--- a/src/html/pages/services/request-bike/_request-bike.html
+++ b/src/html/pages/services/request-bike/_request-bike.html
@@ -1,5 +1,6 @@
 <section class="request-bike">
 	<div class="container request-bike__inner">
+		<h2 class="sr-only">Request a call</h2>
 		<div class="form-wrapper">
 			<include src="html/components/request-form/_index.html" locals='{
 				"formClassName": "request-bike__form"
