--- a/src/html/pages/contacts/map/_map.html
+++ b/src/html/pages/contacts/map/_map.html
@@ -1,7 +1,7 @@
 <section class="map">
 	<div class="container">
 		<h2 class="sr-only">Map</h2>
-		<iframe
+		<iframe class="map__frame"
 			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.5464675033204!2d-0.12209412284526334!3d51.50318971101035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604b900d26973%3A0x4291f3172409ea92!2z0JvQvtC90LTQvtC90YHQutC40Lkg0JPQu9Cw0Lc!5e0!3m2!1sru!2sua!4v1722529956684!5m2!1sru!2sua"
 			width="1170" height="600" style="border:0;" allowfullscreen="" loading="lazy"
 			referrerpolicy="no-referrer-when-downgrade"></iframe>
