--- a/src/html/pages/home/hero/_hero.html
+++ b/src/html/pages/home/hero/_hero.html
@@ -6,7 +6,7 @@
 				<p>Book a bike for hire at a low price and get the next
 					rental with a <b class="color-white">25% discount!</b></p>
 			</div>
-			<button class="btn" href="/contacts" type="button">rental bike</button>
+			<a class="btn" href="/contacts.html">rental bike</a>
 		</div>
 	</div>
 </section>
